--- a/intro.qmd
+++ b/intro.qmd
@@ -97,8 +97,4 @@ This section explores how different spectral bands used in remote sensing contri
 
 ## Reflection
 
-Reflecting on the concepts covered in this course, I've gained a deeper appreciation for Landsat satellites and their pivotal role in remote sensing. Previously, during my undergraduate studies, I engaged in projects involving RS image analysis, particularly in forest fire detection. I utilized **Sensitive Bands** like Mid-Infrared (MIR) and Thermal Infrared (TIR) to identify areas meeting specific thresholds, which highlighted the spread of forest fires.
-
-![My Undergraduate Project: RS Image Detection of Forest Fires](images/clipboard-4252325944.png)
-
-Landsat satellites, with their extensive data archives, not only capture such critical events but also provide insights into broader environmental changes. This underscores the importance of leveraging remote sensing data to comprehend and manage our planet's dynamic ecosystems effectively.
+Through the basic knowledge of this class, I inadvertently deepened my understanding of Landsat series satellites from the concepts of electromagnetic wave, multispectral image and hyperspectral image. Landsat provides the longest continuous space record of Earth’s land mass. Its data is essential for us to make informed decisions about the Earth’s resources and environment. It Landsat is more than just a camera circling the globe with an excellent zoom lens. It measures how much light the Earth reflects from the sun. With Landsat, we have access to a variety of useful images that reveal more about the Earth and help us better understand and manage our planet. For example, these images can be used to monitor the effects of natural and human factors such as land cover, climate change, urbanization, drought, fires, changes in biomass, etc. Therefore, the public use of Landsat data makes a lot of sense, and experts, scholars, and enterprise engineers can implement projects according to their needs.
