--- a/wk2_Landsat9.Rmd
+++ b/wk2_Landsat9.Rmd
@@ -107,7 +107,7 @@ img {
 ### 1.1 Landsat9 Overview
 
 ```{r eval=FALSE, fig.align='center', include=FALSE, out.height='200%'}
-l9_path="https://landsat.gsfc.nasa.gov/wp-content/uploads/2020-07/Landsat_timeline_20200318_title.gif"
+l9_path="https://landsat.gsfc.nasa.gov/wp-content/uploads/2021/12/ldcm_2012_COL-300x168-1.png"
 knitr::include_graphics(l9_path)
 ```
 
@@ -210,8 +210,31 @@ source:[USGS Technical Announcement (February 2022)](https://www.usgs.gov/landsa
 source:[Landsat 9 Mission Details](https://landsat.gsfc.nasa.gov/satellites/landsat-9/landsat-9-mission-details/)
 
 
+
+
+
 ---
-## 4 Scientific Applications of Landsat 9
+## 4 Data Distribution and Utilization
+<small>
+
+```{r echo=FALSE, out.width='150%', fig.align='center'}
+oli_tir="https://www.eoportal.org/ftp/satellite-missions/l/Landsat9_180722/Landsat9_Auto1.jpeg"
+knitr::include_graphics(oli_tir)
+```
+
+- **Data Acquisition and Processing:**
+Landsat 9 data can be obtained through various channels, including NASA and USGS official websites, data archives, etc. Additionally, various data processing tools and software are available for data analysis and processing.
+
+- **User Support and Services:**
+NASA and USGS provide various support and services for users, including data query, technical support, training, and educational resources, facilitating users in effectively utilizing Landsat 9 data.
+
+- **Data Application Examples:**
+Landsat 9 data has widespread application examples across various fields, including land use monitoring, agricultural production, urban planning, environmental protection, etc.
+
+
+
+---
+## 5 Scientific Applications of Landsat 9
 
 <div style="display: flex; justify-content: space-around; align-items: flex-start; text-align: middle;">
   <figure style="margin: 0 5px; flex-basis: calc(31.3% - 2px);">
@@ -333,36 +356,30 @@ source: [USDA/FAS and NASA/GSFC/GIMMS Global Agriculture Monitoring (GLAM) Proje
 
 
 
-
-
-
----
-## 5 Data Distribution and Utilization of Landsat 9
-
-Data Acquisition and Processing:
-Landsat 9 data can be obtained through various channels, including NASA and USGS official websites, data archives, etc. Additionally, various data processing tools and software are available for data analysis and processing.
-
-User Support and Services:
-NASA and USGS provide various support and services for users, including data query, technical support, training, and educational resources, facilitating users in effectively utilizing Landsat 9 data.
-
-Data Application Examples:
-Landsat 9 data has widespread application examples across various fields, including land use monitoring, agricultural production, urban planning, environmental protection, etc.
-
-
 ---
 ## 6 Future Outlook
+```{r echo=FALSE, fig.align='center', out.height='300%'}
+l9_path="https://d9-wret.s3.us-west-2.amazonaws.com/assets/palladium/production/s3fs-public/styles/full_width/public/media/images/L-Next-SpectralBands-.png?itok=mSGGEi4R"
+knitr::include_graphics(l9_path)
+```
+<small>
+Landsat Next, set to launch in late 2030 / early 2031, will enhance Earth observation with a **26-band superspectral** constellation, improving spatial and temporal resolution. The mission will feature three identical observatories, providing a 6-day revisit time and collecting 20 times more data than Landsat 9, with higher spatial resolutions and free data access for all users.
 
-Role and Impact of Landsat 9:
-Landsat 9 will continue to play a significant role in Earth observation, providing data support and technical assistance for scientific research, resource management, and environmental protection.
 
-Trends in Earth Observation Technology Development:
-With continuous technological advancements, Earth observation technology is expected to evolve, potentially introducing more advanced sensors and technologies, leading to breakthroughs in Earth science research.
-
-
-
+<br/>Source: [NASA’s Goddard Space Flight Center. (2024)](https://www.usgs.gov/landsat-missions/landsat-next), [Wulder, M.A. et al., 2019](https://www.sciencedirect.com/science/article/pii/S0034425719300707),[Masek, J.G. et al., 2020](https://www.sciencedirect.com/science/article/abs/pii/S0034425720303382)
 
 ---
 ## 7 Reflection
+
+Landsat Next's enhancement of Earth observation with a 26-band superspectral constellation means there are more detectable spectra. Reflecting on the **progress from Landsat 8 to Landsat 9**, it is evident that significant advancements have been made, particularly in terms of a wider detection range. So, what has been added?
+
+
+Reflecting on the evolution from Landsat 8 to Landsat 9, significant advancements are apparent. Landsat 9 has improved spatial resolution and temporal coverage, allowing for more frequent and accurate observations.
+
+One of the key insights I gained is the importance of the Operational Land Imager 2 (OLI-2) and Thermal Infrared Sensor 2 (TIRS-2) in capturing high-resolution data across multiple spectral bands.
+
+Therefore, I think the **Landsat Next** program is crucial for hardware upgrades, especially sensor upgrades and innovations. Achieving a wider range of detection performance is undoubtedly challenging but essential.
+
 
 
 ---
@@ -377,4 +394,10 @@ With continuous technological advancements, Earth observation technology is expe
 
 - Hansen, M.C. and Loveland, T.R., 2012. _A review of large area monitoring of land cover change using Landsat data_. Remote Sensing of Environment, 122, pp.66-74.
 
-- 
+- NASA’s Goddard Space Flight Center. (2024). _Landsat Next: Advancing Earth Observation Capabilities_. Available at: [https://www.usgs.gov/landsat-missions/landsat-next](https://www.usgs.gov/landsat-missions/landsat-next) (Accessed: 8 July 2024).
+
+- Wulder, M.A., Loveland, T.R., Roy, D.P., Crawford, C.J., Masek, J.G., Woodcock, C.E., Allen, R.G., Anderson, M.C., Belward, A.S., Cohen, W.B., Dwyer, J., Erb, A., Gao, F., Griffiths, P., Helder, D., Hermosilla, T., Hipple, J.D., Hostert, P., Hughes, M.J., Huntington, J., … Zhu, Z., 2019. _Current status of Landsat program, science, and applications1Remote Sensing of Environment_, 225, pp.127-1472. DOI: [10.1016/j.rse.2019.02.0153](10.1016/j.rse.2019.02.0153).
+
+- Masek, J.G., Wulder, M.A., Markham, B., McCorkel, J., Crawford, C.J., Storey, J. and Jenstrom, D.T., 2020. _Landsat 9: Empowering open science and applications through continuity1Remote Sensing of Environment_, 248, p.1119682.
+<small>
+
