--- a/wk3_RS_data.qmd
+++ b/wk3_RS_data.qmd
@@ -4,7 +4,11 @@ title: "Week3 - Remote Sensing Data"
 
 ## Abstract
 
+::: callout-tip
+## 
+
 This lecture mainly provides detailed information on remote sensing cities and environments, especially on the use and processing of remote sensing data, and introduces the correction methods of remote sensing data, including geometric, atmospheric, orthographic/topographic correction and radiometric correction. Prior to this, data processing is required, including data linking and enhancement such as feathering, image enhancement, and other enhancement techniques. In addition to this, this lesson introduces remote sensing technology, explaining the different types of remote sensing sensors, such as push-sweep and scan sensors, and how they work. Practical Guide: Provides a guide on how to use presentation slides, including the use of search tools and the drawing function on slides.
+:::
 
 ## Summary of Common Remote Sensing Indices
 
@@ -41,6 +45,8 @@ $$ SMI = \frac{(NIR + SWIR)}{2} $$
 $$LSTVI = \frac{(Tb - NDVI)}{(Tb + NDVI)} $$ where ( Tb ) is the land surface temperature.
 
 These indices play crucial roles in various applications such as land cover classification, vegetation monitoring, and environmental assessments.
+
+## Application
 
 ## Reflection
 
